--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
     <div id = "week">
         <p style = "padding-left: 20%; font-size: 10mm;">Week Overview</p>
         <div id = "overview">
-            <div class = "card">
+            <div class = "card" id = "sun">
                 <h1>Sun</h1>
                 <h2>12</h2>
                 <h3>Good</h3>
             </div>
-            <div class = "card">
+            <div class = "card" id = "mon">
                 <h1>Mon</h1>
                 <h2>12</h2>
                 <h3>Good</h3>
             </div>
-            <div class = "card">
+            <div class = "card" id = "tue">
                 <h1>Tue</h1>
                 <h2>12</h2>
                 <h3>Good</h3>
             </div>
-            <div class = "card">
+            <div class = "card" id = "wed">
                 <h1>Wed</h1>
                 <h2>12</h2>
                 <h3>Good</h3>
             </div>
-            <div class = "card">
+            <div class = "card" id = "thu">
                 <h1>Thu</h1>
                 <h2>12</h2>
                 <h3>Good</h3>
             </div>
-            <div class = "card">
+            <div class = "card" id = "fri">
                 <h1>Fri</h1>
                 <h2>12</h2>
                 <h3>Good</h3>
             </div>
-            <div class = "card">
+            <div class = "card" id = "sat">
                 <h1>Sat</h1>
                 <h2>12</h2>
                 <h3>Good</h3>
